--- a/modules/core/global.css
+++ b/modules/core/global.css
@@ -36,3 +36,7 @@ ul {
   margin: 0;
   width: 100%;
 }
+p {
+  padding: 0;
+  margin: 2px 0 5px;
+}
